broken on purpose to illustrate a point

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-orbtk = "0.3.1-alpha2"
+orbtk = {path = "../custom-reg/orbtk"}
 scraper = "*"
 html5ever = "*"
 ego-tree = "*"
